welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:8: error: not found: value varT
		varT(i)=getCouleurSol()
                ^Array1:16: error: not found: value CouleurBrosse
		CouleurBrosse()=T(i)
                ^